03-gitops/apps/03-personal/immich/personal-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: personal
  labels:
    name: personal
