03-gitops/apps/03-personal/immich/immich-tailscale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-tailscale
  namespace: media
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - immich
  defaultBackend:
    service:
      name: immich
      port:
        number: 2283
